--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "terser": "^5.44.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.7",
+    "wrangler": "^4.53.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   }
 }
